--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -319,8 +319,8 @@ msgstr "You still have no files here"
 #, markdown
 msgid "dashboard.empty-placeholder-drafts"
 msgstr ""
-"Oh no! You have no files yet! If you want to try with some templates go to "
-"[Libraries & templates](https://penpot.app/libraries-templates.html)"
+"Files added to Libraries will appear here. Try sharing your files or add from our "
+"[Libraries & templates](https://penpot.app/libraries-templates.html)."
 
 msgid "dashboard.export-binary-multi"
 msgstr "Download %s Penpot files (.penpot)"
