:sparkles: Improves tooltip
X and Y position tooltips updated to communicate more info

Signed-off-by: Prithvi Tharun <ptrithu8@gmail.com>

--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -4133,10 +4133,10 @@ msgid "workspace.options.width"
 msgstr "Width"
 
 msgid "workspace.options.x"
-msgstr "X"
+msgstr "X axis"
 
 msgid "workspace.options.y"
-msgstr "Y"
+msgstr "Y axis"
 
 msgid "workspace.path.actions.add-node"
 msgstr "Add node (%s)"
